--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{ include = "past_years" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+msgspec = "^0.13.1"
+loguru = "^0.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1.0"
