--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ loguru = "^0.6.0"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1.0"
 ruff = "^0.0.252"
+black = "^23.1.0"
 
 [tool.ruff]
 fix = true
