--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,12 +6,19 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+  - repo: https://github.com/psf/black
+    rev: 22.10.0
+    hooks:
+      - id: black
+        require_serial: true
+        args: ["--config", "./backend/pyproject.toml", "backend"]
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     # Ruff version.
     rev: 'v0.0.252'
     hooks:
       - id: ruff
         args: ["--config", "./backend/pyproject.toml", "backend"]
+        require_serial: true
   - repo: local
     hooks:
       - id: tsc
