--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ include = "past_years" }]
 python = "^3.11"
 msgspec = "^0.13.1"
 loguru = "^0.6.0"
+whoosh = "^2.7.4"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1.0"
