--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,13 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
-    "solid-js": "^1.6.10"
+    "@hope-ui/solid": "^0.6.7",
+    "@solidjs/router": "^0.7.0",
+    "@stitches/core": "^1.2.8",
+    "axios": "^1.3.4",
+    "camelcase-keys": "^8.0.2",
+    "solid-icons": "^1.0.4",
+    "solid-js": "^1.6.10",
+    "solid-transition-group": "^0.0.10"
   }
 }
