--- a/backend/past_years/.config.toml
+++ b/backend/past_years/.config.toml
@@ -5,7 +5,7 @@ mode = "dev"
 
 # API related configurations
 [dev.api]
-allow_origins = ["http://localhost:3000"]
+allow_origins = ["http://localhost:3000", "http://localhost:4173"]
 
 [test.api]
 # Leave empty, else `msgspec` will raise a ValidationError
