--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,11 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+      - id: check-toml
+      - id: check-ast
+      - id: detect-private-key
+      - id: no-commit-to-branch
+      - id: check-json
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
