--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       - id: check-ast
       - id: detect-private-key
       - id: no-commit-to-branch
+        args: [--branch, main]
       - id: check-json
   - repo: https://github.com/psf/black
     rev: 22.10.0
