--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,8 @@ msgspec = "^0.13.1"
 loguru = "^0.6.0"
 whoosh = "^2.7.4"
 falcon = "^3.1.1"
+python-dotenv = "^1.0.0"
+httpx = "^0.23.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1.0"
