--- a/backend/past_years/.config.toml
+++ b/backend/past_years/.config.toml
@@ -9,11 +9,17 @@ mode = "dev"
 # API related configurations
 [dev.api]
 allow_origins = ["http://localhost:3000", "http://localhost:4173"]
+gh_repo_name = "gh-api-trial"
+gh_repo_owner = "guacs"
+
 
 [test.api]
-# Leave empty, else `msgspec` will raise a ValidationError
+gh_repo_name = "gh-api-trial"
+gh_repo_owner = "guacs"
 
 [prod.api]
+gh_repo_name = "gh-api-trial"
+gh_repo_owner = "guacs"
 
 
 # Questions related configurations
