--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     hooks:
       - id: black
         require_serial: true
-        args: ["--config", "./backend/pyproject.toml", "backend"]
+        args: ["--config", "./backend/pyproject.toml", "./backend"]
   - repo: local
     hooks:
       # Removing `tsc` check until this issue is resolved:
