--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ falcon = "^3.1.1"
 python-dotenv = "^1.0.0"
 httpx = "^0.23.3"
 mysql-connector-python = "^8.0.32"
+pyjwt = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1.0"
